Organización inicial del Login

--- a/src/app/components/marketplace/pages/detail-product/detail-product.component.html
+++ b/src/app/components/marketplace/pages/detail-product/detail-product.component.html
@@ -1,3 +1,4 @@
+<app-header-marketplace></app-header-marketplace>
 <a routerLink="/products" class="atras">
   <i class="bi bi-arrow-left"></i>
 </a>
