--- a/src/app/components/marketplace/pages/voucher/voucher.component.html
+++ b/src/app/components/marketplace/pages/voucher/voucher.component.html
@@ -1,3 +1,4 @@
+<app-header-cbit></app-header-cbit>
 <a routerLink="/tyc" class="atras">
   <i class="bi bi-arrow-left"></i>
 </a>
@@ -5,27 +6,21 @@
   <h2 class="text-center titulo">Transacción realizada</h2>
   <div class="comprobante">
     <b>Transacción No.</b>
-    <p>{{ idTransaccion }}</p>
+    <p>{{ transaccion.idTransaccion }}</p>
     <b>Fecha de transacción</b>
-    <p>{{ fechaTransaccion | date: 'dd-MMM-yyyy HH:mm:ss' }}</p>
-    <b>NIT Comercio</b>
-    <p>{{ comercioPruebas.idComercio }}</p>
-    <b>Razón social</b>
-    <p>{{ comercioPruebas.razonSocial }}</p>
-    <b>Tipo de documento</b>
-    <p>Cédula de ciudadanía</p>
-    <b>Número de documento</b>
-    <p>{{ clientePruebas.numeroIdentificacion }}</p>
-    <b>Nombre</b>
+    <p>{{ transaccion.fechaTransaccion| date: 'dd-MMM-yyyy HH:mm:ss' }}</p>
+    <b>Cliente</b>
     <p>{{ clientePruebas.nombre }}</p>
     <b>Correo electrónico</b>
     <p>{{ clientePruebas.email }}</p>
+    <b>Número de documento</b>
+    <p>{{ clientePruebas.numeroIdentificacion }}</p>
     <br>
     <b>Valor</b>
-    <p>{{ totalValue | currency }}</p>
+    <p>{{ transaccion.valorCompra| currency }}</p>
     <b>Estado</b>
-    <p>{{ estado }}</p>
+    <p>{{ transaccion.estado }}</p>
     <b>Número de aprobación </b>
-    <p>{{ numAprobacion }}</p>
+    <p>{{ transaccion.numeroAprobacion }}</p>
   </div>
 </div>
