Servicio Daviplata OK

--- a/src/app/components/marketplace/pages/voucher/voucher.component.html
+++ b/src/app/components/marketplace/pages/voucher/voucher.component.html
@@ -17,7 +17,7 @@
     <p>{{ clientePruebas.numeroIdentificacion }}</p>
     <br>
     <b>Valor</b>
-    <p>{{ transaccion.valorCompra| currency }}</p>
+    <p>{{ totalValue | currency }}</p>
     <b>Estado</b>
     <p>{{ transaccion.estado }}</p>
     <b>Número de aprobación </b>
