--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.css
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.css
@@ -1,3 +1,12 @@
+p{
+  margin: 0;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+}
 .titulo{
   font-family: 'Open Sans', sans-serif;
   font-size: 24px;
@@ -35,4 +44,25 @@
   width: 29px;
   height: 22px;
   text-align: center;
+}
+.input-group {
+  font-weight: 400;
+  height: 3rem;
+  border-radius: 10px;
+}
+.input-group-text i {
+  /* background-color: red; */
+  color: #2f69c5;
+  width: 100%;
+  font-size: 1.5rem;
+}
+.input-telefono{
+  width: 80%;
+  margin: 0 auto;
+}
+.gestion-tel{
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
