--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.html
@@ -1,14 +1,28 @@
 <body>
   <app-header-cbit></app-header-cbit>
-  <h1 class="titulo">Código de verificación</h1>
-  <app-indicator></app-indicator>
-  <div class="icono-mensaje">
-    <i class="bi bi-chat-left"></i>
-  </div>
-  <div class="texto1">
-    <p>Escriba el código enviado a su celular</p>
-  </div>
-  <div class="campo-telefono">
-    <p class="telefono">3154113212</p> <i class="bi bi-pencil-fill"></i>
+  <div class="container">
+    <h1 class="titulo">Código de verificación</h1>
+    <app-indicator></app-indicator>
+    <div class="icono-mensaje">
+      <i class="bi bi-chat-left"></i>
+    </div>
+    <div class="texto1">
+      <p>Escriba el código enviado a su celular</p>
+    </div>
+    <div class="gestion-tel">
+      <div class="campo-telefono" *ngIf="!editPhone">
+        <p class="telefono">3154113212</p>
+        <i class="bi bi-pencil-fill" (click)="changeEditPhone()"></i>
+      </div>
+      <div class="input-telefono" *ngIf="editPhone">
+        <div class="input-group">
+          <input class="form-control" type="tel" />
+          <span class="input-group-text"
+            ><i class="bi bi-floppy" (click)="changeEditPhone()"></i
+          ></span>
+        </div>
+      </div>
+    </div>
+    <app-otp></app-otp>
   </div>
 </body>
