--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,10 @@
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <app-form-phone-confirm></app-form-phone-confirm>
+
+<!-- MARKETPLACE -->
+<!-- <app-list-product></app-list-product> -->
+<!-- <app-detail-product></app-detail-product> -->
+<!-- <app-cart></app-cart> -->
+<!-- <app-header-marketplace></app-header-marketplace> -->
+<!-- <app-product></app-product> -->
