--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- COMPONENTS UTILS -->
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator></app-indicator> -->
@@ -5,11 +6,12 @@
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
 
+<!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
 <!-- <app-form-registration></app-form-registration> -->
-<!-- <app-loading-begin></app-loading-begin> -->
+<app-loading-begin></app-loading-begin>
 <!-- <app-login></app-login> -->
-<app-form-phone-confirm></app-form-phone-confirm>
+<!-- <app-form-phone-confirm></app-form-phone-confirm> -->
 
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
