subí cada uno de los componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<app-pantalla1></app-pantalla1>
-<app-pantalla2></app-pantalla2>
+<app-list-products></app-list-products>
+<app-list-recommendations></app-list-recommendations>
+<app-list-category></app-list-category>
+<app-list-product-vertical></app-list-product-vertical>
+
+<!-- <app-product></app-product> -->
+<!-- <app-dashboard></app-dashboard> -->
+<!-- <app-my-products></app-my-products> -->
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator-signin-user></app-indicator-signin-user> -->
