--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encabezado azul con logo</title>
-    <link rel="stylesheet" href="pantalla1.component.css">
+    <link rel="stylesheet" href="dashboard.component.css">
    
 
 
   </head>
 
+<app-header-cbit></app-header-cbit>
+
+
 
 <body>
-  <header>
-      <div class="logo">
-          
-          <img src="../assets/logo.png" alt="Logo CBit">
-      </div>
-     
-  </header>
+  
 
   <nav>
     <a href="" class="nav-link"> Agregar Productos </a>
