--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encabezado azul con logo</title>
-    <link rel="stylesheet" href="pantalla2.component.css">
+    <link rel="stylesheet" href="my-products.component.css">
 </head>
 
 
