Animación del login OK

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 <!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
 <!-- <app-form-registration></app-form-registration> -->
-<app-loading-begin></app-loading-begin>
+<!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <!-- <app-form-phone-confirm></app-form-phone-confirm> -->
 
