--- a/src/app/pages/loading-begin/loading-begin.component.css
+++ b/src/app/pages/loading-begin/loading-begin.component.css
@@ -1,6 +1,6 @@
 /* ESTILOS LOADING */
-
 .loading {
+  position: fixed;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -8,51 +8,34 @@
   justify-content: center;
   align-items: center;
   background: linear-gradient(115deg, #00b0f9, #00bfcf, #0b2794);
-  background-color: black;
   background-size: 200% 100%;
   background-position: 100% 100%;
-  animation: gradientAnimation1 3s ease-in-out 0s 1 normal forwards;
+  animation: gradientAnimation1 3s ease-in-out 0s 1 normal forwards,
+    gradientAnimation2 0.5s ease-in-out 3s 1 normal forwards;
 }
 
 @keyframes gradientAnimation1 {
   0% {
     background-position: 100% 100%;
   }
-  50% {
-    background-position: 0% 100%;
-  }
   100% {
     background-position: 0% 100%;
   }
-}
-.loading::after{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(to right, #00B0F9, #1F2A95);
-  opacity: 0;
-  animation: gradientAnimation2 1s ease-in-out 1 forwards;
-  animation-delay: 3s;
 }
 
 @keyframes gradientAnimation2 {
-  0% {
-    opacity: 0;
-  }
   100% {
-    opacity: 1;
+    opacity: 0;
+    display: none;
   }
 }
 
 .logo {
-  width: 25%;
+  width: 35%;
   height: fit-content;
   transform: rotate(-30deg);
   opacity: 0;
-  animation: logo-animation 2s ease-in 1 forwards;
+  animation: logo-animation 2s ease 1 forwards;
 }
 .logo img {
   width: 100%;
@@ -85,72 +68,7 @@
 }
 
 @keyframes nombre-empresa-animation {
-  0% {
-    opacity: 0;
-  }
   100% {
     opacity: 1;
   }
-}
-
-/* ESTILOS LOGIN */
-.login{
-  display: none;
-  animation: animationLogin 1s ease 5s 1 normal forwards;
-}
-@keyframes animationLogin {
-  0% {
-    display: none;
-  }
-  100% {
-    display: block;
-  }
-}
-.container {
-  max-width: 90%;
-}
-.form-login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-}
-label {
-  color: white;
-  font-weight: bold;
-  font-size: 16px;
-}
-.input-group {
-  font-weight: 400;
-  height: 3rem;
-  border-radius: 10px;
-}
-.campos-labels {
-  width: 100%;
-}
-.form-control .form-select {
-  color: black;
-}
-.input-group-text {
-  padding: 0 0.8rem;
-  background-color: #d9d9d9;
-  border-radius: 10px;
-}
-.input-group-text i {
-  /* background-color: red; */
-  color: #2f69c5;
-  width: 100%;
-  font-size: 1.5rem;
-}
-.texto-final {
-  color: white;
-  font-size: 16px;
-  text-align: center;
-  padding: 1rem;
-}
-.texto-final a {
-  font-weight: bold;
-  cursor: pointer;
-  text-decoration: underline;
 }
