Modificación estilos form-phone-confirm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
-<!-- <app-form-phone-confirm></app-form-phone-confirm> -->
+<app-form-phone-confirm></app-form-phone-confirm>
 
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
