--- a/src/app/pages/form-phone-confirm/form-phone-confirm.component.css
+++ b/src/app/pages/form-phone-confirm/form-phone-confirm.component.css
@@ -16,7 +16,7 @@ p{
   color: white;
 }
 .icono-mensaje{
-  font-size: 7rem;
+  font-size: 5rem;
   color: white;
   text-align: center;
 }
@@ -45,14 +45,21 @@ p{
   width: 29px;
   height: 22px;
   text-align: center;
+  cursor: pointer;
 }
+.bi-pencil-fill:hover{
+  color: #1F2A95;
+}
+.input-group-text{
+  cursor: pointer;
+}
+
 .input-group {
   font-weight: 400;
   height: 3rem;
   border-radius: 10px;
 }
 .input-group-text i {
-  /* background-color: red; */
   color: #2f69c5;
   width: 100%;
   font-size: 1.5rem;
@@ -81,6 +88,6 @@ p{
   text-decoration: underline;
   cursor: pointer;
 }
-app-btn-cbit{
+app-btn-cbit {
   padding: 3rem;
 }
