Modificación de estilos en Marketplace

--- a/src/app/components/marketplace/pages/cart/cart.component.html
+++ b/src/app/components/marketplace/pages/cart/cart.component.html
@@ -1,32 +1,33 @@
-<p>cart works!</p>
 <app-header-marketplace></app-header-marketplace>
 <a routerLink="/products" class="atras">
   <i class="bi bi-arrow-left"></i>
 </a>
 <div class="container">
   <h2 class="text-center titulo">Carrito de compras</h2>
-  <div class="mb-3 card-mobile" *ngFor="let product of carrito">
-    <div class="producto">
-      <div class="imagen">
-        <img src="{{ product.image }}" alt="Imagen de {{ product.title }}">
+  <div *ngIf="carrito != null">
+    <div class="mb-3 card-mobile" *ngFor="let product of carrito">
+      <div class="producto">
+        <div class="imagen">
+          <img src="{{ product.image }}" alt="Imagen de {{ product.title }}">
+        </div>
+        <div class="detalles">
+          <b>{{ product.title }}</b>
+          <p>{{ product.price | currency }}</p>
+        </div>
       </div>
-      <div class="detalles">
-        <b>{{ product.title }}</b>
-        <p>{{ product.price | currency }}</p>
-      </div>
-    </div>
-    <div class="cantidad-precio">
-      <div class="cantidad">
-        <button class="btn" (click)="restarCantidad(product)">
-          <i class="bi bi-dash operacion"></i>
-        </button>
-        <span>{{ product.quantity }}</span>
-        <button class="btn" (click)="sumarCantidad(product)">
-          <i class="bi bi-plus operacion"></i>
-        </button>
-      </div>
-      <div class="precio">
-        <p>{{ product.price * product.quantity | currency }}</p>
+      <div class="cantidad-precio">
+        <div class="cantidad">
+          <button class="btn" (click)="restarCantidad(product)">
+            <i class="bi bi-dash operacion"></i>
+          </button>
+          <span>{{ product.quantity }}</span>
+          <button class="btn" (click)="sumarCantidad(product)">
+            <i class="bi bi-plus operacion"></i>
+          </button>
+        </div>
+        <div class="precio">
+          <p>{{ product.price * product.quantity | currency }}</p>
+        </div>
       </div>
     </div>
   </div>
@@ -34,6 +35,6 @@
     <div>
       <p class="text-center ">Total: {{ total | currency }}</p>
     </div>
-    <button class="btn btn-success" [disabled]="!total" routerLink="/login">Pagar</button>
+    <button class="btn btn-success" [disabled]="!total" >Pagar</button>
   </div>
 </div>
