se agregga componente Lista de productos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,4 +9,7 @@
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <!-- <app-terms-and-conditions></app-terms-and-conditions> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-list-products></app-list-products> -->
+<app-dashboard></app-dashboard>
+<!-- <app-terms-and-conditions></app-terms-and-conditions> -->
