--- a/src/app/components/marketplace/utils/list-products/list-products.component.css
+++ b/src/app/components/marketplace/utils/list-products/list-products.component.css
@@ -1,30 +1,19 @@
-.titulo {
-  padding: 1rem 0;
-}
-button {
-  width: auto;
-  height: auto;
-}
-.items-carrito {
-  background-color: #fff;
+.titulo-y-carrito{
   display: flex;
   justify-content: space-between;
+  padding: 1rem 0;
   align-items: center;
-  padding: 0.5rem 1rem;
-  box-shadow: 0 0 15px #a6b1bd;
+  position: sticky;
+  top: 56px;
+  z-index: 1;
+  background-color: #fff;
 }
-.items-carrito p {
+.titulo {
   margin: 0;
 }
-
-@media screen and (min-width: 768px) {
-  .items-carrito {
-    justify-content: center;
-    gap: 1rem;
-  }
+.carrito{
+  height: auto;
+  width: auto;
 }
 
-.container:last-child {
-  margin-bottom: 4.2rem;
-}
 
