--- a/src/app/components/utils/help/help.component.html
+++ b/src/app/components/utils/help/help.component.html
@@ -1,3 +1,3 @@
 <a routerLink="{{ routerLink }}">
-    <img src="./assets/Imagenes/InquiryInquiry-1.svg" alt="Help"/>
+    <img src="./assets/Imagenes/InquiryInquiry-1.svg" alt="IconHelp"/>
 </a>
