Agregado Términos y condiciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
 <!-- <app-detail-product></app-detail-product> -->
-<app-cart></app-cart>
+<!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
+<app-terms-conditions></app-terms-conditions>
