cambio de Logos + ponerlos modo listado y margenes

--- a/src/app/components/utils/category/category.component.html
+++ b/src/app/components/utils/category/category.component.html
@@ -1,7 +1,8 @@
-<p>category works!</p>
-<div class="itemCarrousel" id="itemCarrousel-7">
-    <div class="itemCarrouselTarjeta"><li><a href="enlace2.html">
-        <img src="../../../../assets/categ.png" alt="Imagen 2">
-        </a><span class="nombre-imagen">Todas</span></li>
+    <div class="itemCarrouselTarjeta">
+        
+                <img src="../../../../assets/categ.png" alt="Imagen 2">
+           
+            <span class="nombre-imagen">Todas</span>
     </div>
-</div>
+
+
