--- a/src/app/components/utils/list-category/list-category.component.html
+++ b/src/app/components/utils/list-category/list-category.component.html
@@ -1,7 +1,10 @@
-<p>list-category works!</p>
-<nav>
-    <a href="" class="nav-link"> Categorías </a>
-      
-  </nav>
 
+<div class="container">
+
+  <div class="lista">
   <app-category></app-category>
+  <app-category></app-category>
+  <app-category></app-category>
+
+</div>
+</div>
