--- a/src/app/components/utils/product/product.component.html
+++ b/src/app/components/utils/product/product.component.html
@@ -1,8 +1,24 @@
 
-<div class="itemCarrousel" id="itemCarrousel-1">
+<!-- <script>
+    function oculta () {
+      document.getElementById('ocultar').style.display = 'none';
+      document.getElementById('mostrar').style.display = 'block';
+      document.getElementById('nombre-imagen').style.display = 'none';
+    }
+    function muestra () {
+      document.getElementById('ocultar').style.display = 'block';
+      document.getElementById('mostrar').style.display = 'none';
+      document.getElementById('nombre-imagen').style.display = 'block';
+    }
+    </script> -->
+
     <div class="itemCarrouselTarjeta">
         <img src="../../../../assets/BnCbia.png" alt="Imagen 1">
-        <span class="nombre-imagen"> Crédito Libranza $ 2.652.298,98</span>
+        <!-- <span class="nombre-imagen"> Crédito Libranza $ 2.652.298,98</span> -->
 
     </div>
-</div>
+
+<!-- <div class="controles">
+    <p id="mostrar"onclick="muestra()">  ¤ </p>
+    <p id="ocultar" onclick="oculta()"> Ø </p>
+  </div> -->
