--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,134 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encabezado azul con logo</title>
-    <link rel="stylesheet" href="dashboard.component.css">
-   
-
-
-  </head>
-
-<app-header-cbit></app-header-cbit>
-
-
-
-<body>
-  
-
-  <nav>
-    <a href="" class="nav-link"> Agregar Productos </a>
-  
-    <a href="" class="nav-link"> Mis Productos </a>
-  
-  </nav>
-
-  <script>
-    function ocula () {
-      document.getElementById('ocultar').style.display = 'none';
-      document.getElementById('mostrar').style.display = 'block';
-      document.getElementById('detalle').style.display = 'none';
-    }
-    function muestra () {
-      document.getElementById('ocultar').style.display = 'block';
-      document.getElementById('mostrar').style.display = 'none';
-      document.getElementById('detalle').style.display = 'block';
-    }
-    </script>
-
-
-  <div class="carrousel">
-    <div class="conteCarrousel">
-        <div class="itemCarrousel" id="itemCarrousel-1">
-          <div class="itemCarrouselTarjeta"><img src="../assets/BnCbia.png" alt="Imagen 1">
-              </div>
-      <div class="itemCarrouselArrows">
-        <a href="#itemCarrousel-3"><img src="../assets/izqi.png" alt="izq"></a>
-        <a href="#itemCarrousel-2"><img src="../assets/dere.png" alt="dere"></a>
-      </div>
-    </div>
-        <div class="itemCarrousel" id="itemCarrousel-2">
-            <div class="itemCarrouselTarjeta"><img src="../assets/davip.png" alt="Imagen 2">
-    </div>
-            <div class="itemCarrouselArrows">
-      <a href="#itemCarrousel-1"><img src="../assets/izqi.png" alt="izq"></a>
-                <a href="#itemCarrousel-3"><img src="../assets/dere.png" alt="dere"></a>
-            </div>
-        </div>
-        <div class="itemCarrousel" id="itemCarrousel-3">
-            <div class="itemCarrouselTarjeta"><img src="../assets/bbva.png" alt="Imagen 3">
-    </div>
-            <div class="itemCarrouselArrows">
-      <a href="#itemCarrousel-2"><img src="../assets/izqi.png" alt="izq"></a>
-                <a href="#itemCarrousel-1"><img src="../assets/dere.png" alt="dere"></a>
-            </div>
-        </div>
-    </div>
-    <div class="conteCarrouselController">
-        <a href="#itemCarrousel-1">•</a>
-        <a href="#itemCarrousel-2">•</a>
-        <a href="#itemCarrousel-3">•</a>
-    </div>
-
-
-
-    
-</div>
-
-
-<div class="controles">
-  <p id="mostrar"onclick="muestra()">  ¤ </p>
-  <p id="ocultar" onclick="ocula()"> Ø </p>
-</div>
-
-
-<div class="detalle" id="detalle">
-<p>Crédito Libranza $ 2.652.298,98 </p>
-</div>
-
-
-  
-    <nav>
-      <a href="" class="nav-link"> Te Conviene Saber</a>
-  </nav>
-
-
-
-
-  <div class="carrousel">
-    <div class="conteCarrousel">
-        <div class="itemCarrousel" id="itemCarrousel-4">
-            <div class="itemCarrouselTarjeta"><img src="../assets/nubank.jpg" alt="Imagen 10">
-    </div>
-      <div class="itemCarrouselArrows">
-        <a href="#itemCarrousel-6"><img src="../assets/izqi.png" alt="izq"></a>
-        <a href="#itemCarrousel-5"><img src="../assets/dere.png" alt="dere"></a>
-      </div>
-    </div>
-        <div class="itemCarrousel" id="itemCarrousel-5">
-            <div class="itemCarrouselTarjeta"><img src="../assets/cdt.jpg" alt="Imagen 11">
-    </div>
-            <div class="itemCarrouselArrows">
-      <a href="#itemCarrousel-4"><img src="../assets/izqi.png" alt="izq"></a>
-                <a href="#itemCarrousel-6"><img src="../assets/dere.png" alt="dere"></a>
-            </div>
-        </div>
-        <div class="itemCarrousel" id="itemCarrousel-6">
-            <div class="itemCarrouselTarjeta"><img src="../assets/TarCred.jpg" alt="Imagen 12">
-    </div>
-            <div class="itemCarrouselArrows">
-      <a href="#itemCarrousel-5"><img src="../assets/izqi.png" alt="izq"></a>
-                <a href="#itemCarrousel-4"><img src="../assets/dere.png" alt="dere"></a>
-            </div>
-        </div>
-    </div>
-    <div class="conteCarrouselController">
-        <a href="#itemCarrousel-4">•</a>
-        <a href="#itemCarrousel-5">•</a>
-        <a href="#itemCarrousel-6">•</a>
-    </div>
-</div>
-
-</body>
-</html>
+<p>dashboard works!</p>
