--- a/src/app/components/utils/list-products/list-products.component.html
+++ b/src/app/components/utils/list-products/list-products.component.html
@@ -1,17 +1,9 @@
+<div class="container">
+    <div class="lista">
+        <app-product></app-product>
+        <app-product></app-product>
+        <app-product></app-product>
 
-<nav>
-    <a href="" class="nav-link"> Agregar Productos </a>
-  
-    <a href="" class="nav-link"> Mis Productos </a>
-  
-  </nav>
+    </div>
+</div>
 
-
-<app-product></app-product>
-
-
-<nav>
-    <a href="" class="nav-link"> Te Conviene Saber</a>
-</nav>
-
-<app-recommendation></app-recommendation>
