--- a/src/app/components/utils/list-recommendations/list-recommendations.component.html
+++ b/src/app/components/utils/list-recommendations/list-recommendations.component.html
@@ -1,1 +1,7 @@
-<p>list-recommendations works!</p>
+<div class="container">
+    <div class="lista">
+<app-recommendation></app-recommendation>
+<app-recommendation></app-recommendation>
+<app-recommendation></app-recommendation>
+</div>
+</div>
