creación de las paginas Dashboard y MyProducts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
- <app-list-products></app-list-products> 
- <app-list-recommendations></app-list-recommendations>
-<app-list-category></app-list-category>
-<app-list-product-vertical></app-list-product-vertical>  
+ <app-dashboard></app-dashboard>
+<app-my-products></app-my-products>
 
 <!-- <app-product></app-product> -->
-<!-- <app-dashboard></app-dashboard> -->
+<!-- <app-menu-registration></app-menu-registration> -->
+
 <!-- <app-my-products></app-my-products> -->
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
