--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,23 @@
-<p>dashboard works!</p>
+<!-- <
+
+<app-list-category></app-list-category>
+<app-list-product-vertical></app-list-product-vertical>  -->
+
+<body>
+    <app-header-cbit></app-header-cbit>
+    <div class="container">
+      <h1 class="titulo">Mis productos</h1>
+
+        <div class="itemCarrousel" >
+            <app-list-products></app-list-products> 
+        </div>
+
+        <h1 class="titulo">Te Conviene Saber</h1>
+
+        <div class="itemCarrousel" >
+            <app-list-recommendations></app-list-recommendations>
+        </div>
+
+    </div>
+
+</body>
