--- a/src/app/pages/my-products/my-products.component.html
+++ b/src/app/pages/my-products/my-products.component.html
@@ -1,1 +1,21 @@
-<p>my-products works!</p>
+
+
+<body>
+    <app-header-cbit></app-header-cbit>
+    <div class="container">
+      <h1 class="titulo">Categorías</h1>
+
+        <div class="itemCarrousel" >
+            <app-list-category></app-list-category>
+
+        </div>
+
+        <h1 class="titulo">Cuentas</h1>
+
+        <div class="itemCarrousel" >
+            <app-list-product-vertical></app-list-product-vertical> 
+        </div>
+
+    </div>
+
+</body>
