--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,5 @@
 <!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
-<app-terms-conditions></app-terms-conditions>
+<!-- <app-terms-conditions></app-terms-conditions> -->
+<app-terms-accept></app-terms-accept>
