--- a/src/app/components/headers/header-cbit/header-cbit.component.css
+++ b/src/app/components/headers/header-cbit/header-cbit.component.css
@@ -2,6 +2,7 @@ body {
   background: linear-gradient(135deg, #01aff9, #038bde);
   position: sticky;
   top: 0;
+  z-index: 5;
 }
 img {
   min-width: 200px;
