Agregado terms-accept y modificado icono de back

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
 <!-- <app-loading-begin></app-loading-begin> -->
 <!-- <app-login></app-login> -->
 <!-- <app-form-phone-confirm></app-form-phone-confirm> -->
+<!-- <app-terms-conditions></app-terms-conditions> -->
+<!-- <app-terms-accept></app-terms-accept> -->
 
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
@@ -19,5 +21,3 @@
 <!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
-<!-- <app-terms-conditions></app-terms-conditions> -->
-<app-terms-accept></app-terms-accept>
