--- a/src/app/pages/terms-accept/terms-accept.component.css
+++ b/src/app/pages/terms-accept/terms-accept.component.css
@@ -36,13 +36,15 @@
   justify-content: center;
   gap: 1rem;
   padding: calc(100vh * 0.05) 0 calc(100vh * 0.05) 0;
+  margin: -4rem 0 0 0;
 }
 .back {
+  margin: 0 auto;
   width: 100%;
-  position: absolute;
-  display: inline;
-  top: 0;
-  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0 0.5rem 0;
 }
 .nombre-empresa {
   width: 40%;
@@ -62,7 +64,7 @@
   color: #ffffff;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 4rem;
   padding: 0;
 }
 .list li {
@@ -103,6 +105,12 @@
   width: 25px;
   height: 25px;
   border: 4px solid #00bfcf;
+}
+input[type="checkbox"] {
+  cursor: pointer;
+}
+input[type="checkbox"]:hover {
+  border: 4px solid #1F2894;
 }
 
 input[type="checkbox"]::before {
