--- a/src/app/pages/terms-accept/terms-accept.component.html
+++ b/src/app/pages/terms-accept/terms-accept.component.html
@@ -29,6 +29,7 @@
     <div class="header">
       <div class="back">
         <app-back></app-back>
+        <div></div>
       </div>
       <div class="logos">
         <img
