Add-product Completo

--- a/src/app/pages/add-product/add-product.component.html
+++ b/src/app/pages/add-product/add-product.component.html
@@ -26,7 +26,7 @@
       </form>
     </div>
 
-    <div *ngIf="showSuccessMessage">
+    <div *ngIf="showSuccessMessage" class="result">
 
       <h2>{{ selectedProduct }}</h2>
       <h1>Agregada
