--- a/src/app/pages/add-product/add-product.component.css
+++ b/src/app/pages/add-product/add-product.component.css
@@ -13,7 +13,7 @@ body {
 
 h1 {
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     font-family: "Open Sans", sans-serif;
     color: #6D6464;
     font-weight: bold;
@@ -30,6 +30,7 @@ h1 {
     color: #6D6464;
     background-color: #DEDDFA;
     border-radius: 4px;
+    text-align: center;
 }
 
 .form-validation {
@@ -39,18 +40,20 @@ h1 {
     height: 50vh;
     margin-top: 10%;
 }
+
 .form-validation input{
     width: 100%;
     height: 60px;
     border-radius: 5px;
     border: none;
-    padding: 0 1rem;
+    padding: 0 1rem; 
     background-color: #DEDDFA;
     font-size: 14px;
+   
 }
 
 label {
-    font-size: 24px;
+    font-size: 16px;
     font-family: "Open Sans", sans-serif;
     color: #6D6464;
     font-weight: bold;
