--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -76,7 +76,6 @@
 /* ESTILOS DEL LOGIN */
 
 .login {
-  /* display: none; */
   opacity: 0;
   animation: animationLogin 0.5s linear 3.5s 1 normal forwards;
 }
@@ -123,10 +122,12 @@ label {
   border-radius: 10px;
 }
 .input-group-text i {
-  /* background-color: red; */
   color: #2f69c5;
   width: 100%;
   font-size: 1.5rem;
+}
+input[type="password"] {
+  font-size: 25px;
 }
 .texto-final {
   color: white;
@@ -134,8 +135,16 @@ label {
   text-align: center;
   padding: 1rem;
 }
-.texto-final a {
+.texto-final.login a{
   font-weight: bold;
+  cursor: pointer;
+  text-decoration: underline;
+}
+.texto-final.password{
+  padding: 1rem 0;
+  text-align: right;
+  font-size: normal;
+  font-weight: normal;
   cursor: pointer;
   text-decoration: underline;
 }
