Agregado componente entity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,3 +21,5 @@
 <!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
+<!-- <app-entity></app-entity> -->
+
