--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,4 @@
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
 <!-- <app-entity></app-entity> -->
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
