Agregado header-entity

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
+<app-header-entity></app-header-entity>
 
 <!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
@@ -22,4 +23,4 @@
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-product></app-product> -->
 <!-- <app-entity></app-entity> -->
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
