--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
-<app-header-entity></app-header-entity>
+<!-- <app-header-entity></app-header-entity> -->
 
 <!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
