Agregado form-password

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <!-- <app-item-registro></app-item-registro> -->
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
-<app-header-entity></app-header-entity>
+<!-- <app-header-entity></app-header-entity> -->
 
 <!-- PAGES -->
 <!-- <app-menu-registration></app-menu-registration> -->
@@ -15,6 +15,7 @@
 <!-- <app-form-phone-confirm></app-form-phone-confirm> -->
 <!-- <app-terms-conditions></app-terms-conditions> -->
 <!-- <app-terms-accept></app-terms-accept> -->
+<!-- <app-form-password></app-form-password> -->
 
 <!-- MARKETPLACE -->
 <!-- <app-list-product></app-list-product> -->
