--- a/src/app/components/utils/btn-cbit/btn-cbit.component.css
+++ b/src/app/components/utils/btn-cbit/btn-cbit.component.css
@@ -7,13 +7,13 @@
   color: white;
   height: 58px;
   width: 192px;
-  border: none;
+  border: 1px solid #1D5DC9;
   border-radius: 10px;
   padding: 0.5rem 1rem;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
   color: white;
-  font-weight: bold;
+  font-weight: 600;
   font-size: 20px;
 }
