--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- COMPONENTS UTILS -->
 <!-- <app-header-cbit></app-header-cbit> -->
 <!-- <app-btn-cbit></app-btn-cbit> -->
 <!-- <app-indicator></app-indicator> -->
@@ -6,8 +5,7 @@
 <!-- <app-back></app-back> -->
 <!-- <app-header-login></app-header-login> -->
 <!-- <app-header-entity></app-header-entity> -->
-
-<!-- PAGES -->
+<!-- <app-product></app-product> -->
 <!-- <app-menu-registration></app-menu-registration> -->
 <!-- <app-form-registration></app-form-registration> -->
 <!-- <app-loading-begin></app-loading-begin> -->
@@ -16,12 +14,10 @@
 <!-- <app-terms-conditions></app-terms-conditions> -->
 <!-- <app-terms-accept></app-terms-accept> -->
 <!-- <app-form-password></app-form-password> -->
-
-<!-- MARKETPLACE -->
+<!-- <app-dashboard></app-dashboard> -->
 <!-- <app-list-product></app-list-product> -->
 <!-- <app-detail-product></app-detail-product> -->
 <!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
-<!-- <app-product></app-product> -->
 <!-- <app-entity></app-entity> -->
-<!-- <app-dashboard></app-dashboard> -->
+<app-add-product></app-add-product>
