--- a/src/app/components/headers/header-entity/header-entity.component.html
+++ b/src/app/components/headers/header-entity/header-entity.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="logo-entidad">
       <app-entity
-        [nameEntity]="'Bancolombia'"
-        [nameImage]="'bancolombia'"
+        [nameEntity]="nameEntity"
+        [nameImage]="nameImage"
       ></app-entity>
     </div>
   </div>
