--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,4 +20,4 @@
 <!-- <app-cart></app-cart> -->
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-entity></app-entity> -->
-<app-add-product></app-add-product>
+<!-- <app-add-product></app-add-product> -->
