Agregado form-selfie

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,5 @@
 <!-- <app-header-marketplace></app-header-marketplace> -->
 <!-- <app-entity></app-entity> -->
 <!-- <app-add-product></app-add-product> -->
-<!-- <app-form-selfie></app-form-selfie> -->
+<!-- <app-camera></app-camera> -->
+<app-form-selfie></app-form-selfie>
